# mailstorm

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
src/: errors.rs  imap_client.rs  mail_reader.rs  mail_sender.rs  main.rs  pace_maker.rs  pace_setter.rs  utils.rs
