[package]
name = "mailstorm"
version = "0.1.0"
authors = ["Bruno Thomas <bthomas@iroco.fr>"]
license = "MIT"
description = "Mail injector to generate SMTP/IMAP traffic"
repository = "https://github.com/iroco-co/mailstorm"
keywords = ["mail", "smtp", "imap", "hyper"]
categories = ["network-programming", "mail-programming"]
readme = "README.md"
edition = "2018"


[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
async-channel = "1.9.0"
rand = "0.8"
structopt = "0.3.26"
mail-send = "0.4.0"
csv = "1.2"
mail-parser = "0.8.2"
async-imap = { version = "0.9.1", default-features = false, features = [ "tokio", "runtime-tokio" ] }
async-native-tls = { version = "0.5", default-features = false, features = [ "runtime-tokio" ] }
tokio = { version = "1.32", features = ["net", "io-util", "time", "rt", "rt-multi-thread", "macros"]}
rustls = { version = "0.21", features = ["tls12"]}
tokio-rustls = { version = "0.24"}
